message CounterMessage {
    required double toAdd = 1;
}

message MultRegisterMessage {
    required double toMult = 1;
}
